[tool.poetry]
name = "google_drive_tools"
version = "0.1.0"
description = ""
authors = ["Jeremy Rodrigues <jrodrigues@ripple.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
fabric = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
